@@ -1,3 +1,10 @@
+Changes in version XXX
+=============
+Reconfigured package to remove the clustering/RSEC which will be in a separate package. This is to make the package more lightweight and so the basic class and useful functions that are implemented on the class, unrelated to the clustering, easier and quicker to install.
+
+Other changes:
+* argument `mergeCEObjects` changed to `mergeObjects` in `addClusterings`.
+
 Changes in version 2.7.3 (Release date: April 27, 2020)
 ==============
 * Changes to clustering internals (`mainClustering`, `seqCluster`, `subsampleClustering`) and `clusterSingle`. 
